# wordle-solver

./: Cargo.toml  README.md
crates/wordle_solver/: Cargo.toml
crates/wordle_solver/src/: asset.rs  corpus.rs  lib.rs  perf.rs  solver.rs  types.rs
crates/wordle_solver/tests/: solver.rs
tools/benchmarks/: Cargo.toml
tools/benchmarks/src/: main.rs
tools/opener_report/: Cargo.toml
tools/opener_report/src/: main.rs
tools/wordle_cli/: Cargo.toml
tools/wordle_cli/src/: main.rs
