[package]
name = "wordle_solver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wordle_solver"
path = "src/lib.rs"

[dependencies]
rustc-hash = "2"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
darwin-kperf-sys = "0.1.0"

[lints]
workspace = true
